Text Encoding: Fix "stop on error" for ICU-based codecs

Handling of errors when the "stopOnError" flag was set in
TextCodecICU::decode() was incorrect; the replacement character was
always emitted instead. Align the initialization of the ICU error
callback with what i18n/icu_string_conversions.cc does.

BUG=607540
R=jshin@chromium.org

Review-Url: https://codereview.chromium.org/2235453002
Cr-Commit-Position: refs/heads/master@{#412170}

Former-commit-id: 005842b420cace28845fc552ef6da8086fe527a5