third_party/WebKit/Source/wtf/text/TextCodecICU.cpp
@@ -313,10 +313,8 @@ public:
     {
         if (m_shouldStopOnEncodingErrors) {
             UErrorCode err = U_ZERO_ERROR;
-            ucnv_setToUCallBack(m_converter, UCNV_TO_U_CALLBACK_SUBSTITUTE,
-                UCNV_SUB_STOP_ON_ILLEGAL, &m_savedAction,
-                &m_savedContext, &err);
-            ASSERT(err == U_ZERO_ERROR);
+            ucnv_setToUCallBack(m_converter, UCNV_TO_U_CALLBACK_STOP, 0, &m_savedAction, &m_savedContext, &err);
+            DCHECK_EQ(err, U_ZERO_ERROR);
         }
     }
     ~ErrorCallbackSetter()
@@ -326,9 +324,9 @@ public:
             const void* oldContext;
             UConverterToUCallback oldAction;
             ucnv_setToUCallBack(m_converter, m_savedAction, m_savedContext, &oldAction, &oldContext, &err);
-            ASSERT(oldAction == UCNV_TO_U_CALLBACK_SUBSTITUTE);
-            ASSERT(!strcmp(static_cast<const char*>(oldContext), UCNV_SUB_STOP_ON_ILLEGAL));
-            ASSERT(err == U_ZERO_ERROR);
+            DCHECK_EQ(oldAction, UCNV_TO_U_CALLBACK_STOP);
+            DCHECK(!oldContext);
+            DCHECK_EQ(err, U_ZERO_ERROR);
         }
     }
 
